[package]
name = "keccak-wasm"
version = "0.11.2"
edition = "2021"
publish = false
keywords = ["hash", "keccak", "keccak256", "keccak384", "keccak512", "wasm"]
description = "WASM implementation of keccak"
repository = "https://github.com/ARitz-Cracker/keccak-wasm.git"
homepage = "https://github.com/ARitz-Cracker/keccak-wasm#readme"
license = "MIT"
authors = ["Aritz Beobide-Cardinal <aritz@aritzcracker.ca>"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]

[dependencies]
"wasm-bindgen" = "0.2.92"
"js-sys" = "0.3.69"
"bytemuck" = {version = "1.16", features = ["derive"]}
"hex" = "0.4"

[dev-dependencies]
wasm-bindgen-test = "0.3.42"

[profile.release]
opt-level = "s"
lto = true
